--- a/finalImitativeWebpage/index.html
+++ b/finalImitativeWebpage/index.html
@@ -48,78 +48,94 @@
             <button class="cirButton"></button>
             <button class="cirButton"></button>
         </div>
-        
-        <section class="sTable">
-            <table id="sTable">
-                    <th>
-                    <div class="smartBox">
-                        <h2>SMART</h2>
-                        <img src="../imitativeWebpage/images/puzzle.png" alt="Puzzle Pieces" class="boxPic">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore tempora hic animi veritatis et quia, dolor itaque fugiat quos sit. Lorem, ipsum dolor.</p>
-                        <button class="moreButton">
-                            MORE
-                        </button>
-                    </th>
+        <!-- START OF FLEX-BOXES -->
+        <div class="topFlexContainer">
+            <div id="smartBox">
+                <h2>SMART</h2>
+                    <img src="../imitativeWebpage/images/puzzle.png" alt="Puzzle Pieces" class="boxPics">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore tempora hic animi veritatis et quia, dolor itaque fugiat quos sit. Lorem, ipsum dolor.</p>
+                    <br>
+                    <button class="moreButton">
+                    MORE
+                    </button>
+            </div>
 
-                    <th>
-                    </div>
+            <div id="strongBox">
+                <h2>STRONG</h2>
+                    <img src="../imitativeWebpage/images/plantHand.png" alt="Plant in dirt in hand" class="boxPics">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi aliquid nesciunt quisquam, deleniti recusandae in quod amet saepe commodi, sint numquam?</p>
+                    <button class="moreButton">
+                    MORE
+                    </button>
+            </div>
+            <div id="stableBox">
+                <h2>STABLE</h2>
+                    <img src="../imitativeWebpage/images/maze.png" alt="Maze" class="boxPics">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quas a dolore. Consectetur asperiores distinctio delectus odio aspernatur non!</p>
+                    <br>
+                    <button class="moreButton">
+                    MORE
+                    </button>
+            </div>
+        </div>
 
-                    <div class="strongBox">
-                        <h2>STRONG</h2>
-                        <img src="../imitativeWebpage/images/maze.png" alt="Plant in dirt in hand" class="boxPic">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi aliquid nesciunt quisquam, deleniti recusandae in quod amet saepe commodi, sint numquam?</p>
-                        <button class="moreButton">
-                            MORE
-                        </button>
-                    </th>
-
-                    <th>
-                    </div>
-
-                    <div class="stableBox">
-                        <h2>STABLE</h2>
-                        <img src="../imitativeWebpage/images/plantHand.png" alt="Maze" class="boxPic">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quas a dolore. Consectetur asperiores distinctio delectus odio aspernatur non!</p>
-                        <button class="moreButton">
-                            MORE
-                        </button>
-                    </th>
-                </table>
-        </section>
-        <table class="botTable">
-            <tr>
-                <th>SERVICES</th>
-                <th>OPPORTUNITIES</th>
-                <th>NEWS</th>
-            </tr>
-            <tr>
-                <td>
-                    <p>💮 Lorem ipsum dolor sit amet consectetur.</p>
-                    <p>💮 Lorem ipsum dolor sit amet consectetur.</p>
-                    <p>💮 Lorem ipsum dolor sit amet consectetur.</p>
-                    <p>💮 Lorem ipsum dolor sit amet consectetur.</p>
-                    <p>💮 Lorem ipsum dolor sit amet consectetur.</p>
-                    <p>💮 Lorem ipsum dolor sit amet consectetur.</p>
-                    <p>💮 Lorem ipsum dolor sit amet consectetur.</p>
-                    <p>💮 Lorem ipsum dolor sit amet consectetur.</p>
-                </td>
-                <td class="opportunities">
-                    <h2>💬 Lorem ipsum dolor sit.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, magni maiores! Minus perspiciatis accusamus maiores amet? Eius quibusdam vel doloribus!</p>
-                    <h2>💬 Lorem ipsum dolor sit.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem animi quasi voluptates alias eos sunt minus nihil placeat! Voluptatem, quod?</p>
-                </td>
-                <td class="news">
-                    <h2>📆 Lorem ipsum dolor sit amet.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <h2>📅 Lorem ipsum dolor sit.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia aut voluptas quaerat.</p>
-                </td>
-            </tr>
-        </table>
-        </main>
-        <footer class=footer role="footer">
-            <p>DETROIX &COPY; 2012 * PRIVACY POLICY</p>
+        <div class="botFlexContainer">
+            <div id="servicesBox">
+                <h3>SERVICES</h3>
+                <ul class="servicesUl">
+                    <li class="servicesLi">Lorem ipsum dolor sit amet.</li>
+                    <li class="servicesLi">Lorem ipsum dolor sit amet.</li>
+                    <li class="servicesLi">Lorem ipsum dolor sit amet.</li>
+                    <li class="servicesLi">Lorem ipsum dolor sit amet.</li>
+                    <li class="servicesLi">Lorem ipsum dolor sit amet.</li>
+                    <li class="servicesLi">Lorem ipsum dolor sit amet.</li>
+                    <li class="servicesLi">Lorem ipsum dolor sit amet.</li>
+                    <li class="servicesLi">Lorem ipsum dolor sit amet.</li>
+                </ul>
+                <button class="moreButton">
+                    MORE
+                </button>
+            </div>
+            <div id="opportunitiesBox">
+                <h3>OPPORTUNITIES</h3>
+                <ul>
+                    <li class="opportunitiesLi">
+                        <h4>Lorem ipsum dolor sit.</h4>
+                        <p class="opportunitiesP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae qui optio nihil, corporis aspernatur iste?</p>
+                    </li>
+                    <li class="opportunitiesLi">
+                        <h4>Lorem ipsum dolor sit.</h4>
+                        <p class="opportunitiesP">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique natus at temporibus. Dolorum, assumenda quam.</p>
+                    </li>
+                </ul>
+                <button class="moreButton">
+                    MORE
+                </button>
+            </div>
+            <div id="newsBox">
+                <h3>NEWS</h3>
+                <ul>
+                    <li class="newsLi">
+                        <h4>Lorem ipsum dolor sit amet.</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, aspernatur.</p>
+                    </li>
+                    <li class="newsLi">
+                        <h4>Lorem ipsum dolor sit amet.</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil, totam!</p>
+                    </li>
+                    <li class="newsLi">
+                        <h4>Lorem ipsum dolor sit amet.</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, consectetur.</p>
+                    </li>
+                </ul>
+                <button class="moreButton">
+                    MORE
+                </button>
+            </div>
+        </div>
+    </main>
+    <footer class=footer role="footer">
+        <p>DETROIX &COPY; 2012 * PRIVACY POLICY</p>
     </footer>
 </body>
 </html>
